# rowing-catch

./: .coverage  .gitignore  .instructions.md  LICENSE  README.md  app.py  check_in_check.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_detection_robustness.py  test_drift_normalization.py  test_finish_alignment.py  test_metadata_tracking.py  test_smoothing_fix.py  test_trunk_progression.py  vercel.json
.agents/rules/: rowing-catch-workspace.md
.github/: copilot-instructions.md
api/: index.py  requirements.txt
docs/: ARCHITECTURE.md
docs/plans/: Create_a_feature_list_based_on_the_noteb.md  DEBUG_pipeplien_refactor_to_common_plots.md  analysis_pipeline_recommendations.md  annotation_system_plan.md  diagrams_plan.md  (+1 more)
pages/: 0_Debug_Pipeline.py  0_Debug_Trace.py  1_Trunk_Angle.py  2_Velocity_Coordination.py  3_Handle_Trajectory.py  4_Consistency_and_Rhythm.py  5_Development.py  6_Performance.py
resources/: 2019.12.07.LogBook_PM5_Szabi_2k.csv  2023.12.27.Szabi_20strokesPerMinute_trajectory.csv  2023.12.27.Szabi_36strokesPerMinute_trajectory.csv  2023.12.27.Szabi_36strokesPerMinute_wrongRate_trajectory.csv  2023.12.27.Szabi_StrokeAnalysis_20.ipynb  2023.12.27.Szabi_StrokeAnalysis_36.ipynb  2023.12.27.Szabi_StrokeAnalysis_36_wrongRate.ipynb  2023.12.31.LogBook_PM5_Szabi_maxWatt_exercise.csv  2023.12.31.Szabi_trajectory.csv  2024.03.05.LogBook_PM5_Szabi_2k.csv  2024.03.12.LogBook_PM5_Szabi_maxWatt_exercise.csv  2024.06.06.LogBook_PM5_Szabi_maxWatt_exercise.csv  Szabi_2kTests.ipynb  Szabi_WattAnalysis.ipynb
tests/: test_trunk_progression.py
(+206 files in other folders)
